Fixed resource page list title wrap problem (for real)

--- a/public/stylesheets/sass/themes/genomedynamics/genomedynamics.sass
+++ b/public/stylesheets/sass/themes/genomedynamics/genomedynamics.sass
@@ -721,5 +721,5 @@ a.more, ul.more a
     font-weight: normal
     
 // custom accordion styles
-.accordion_name
-  width: 80%
+.accordion_container .accordion_name
+  width: 80% !important
